# CoreBot_labs-

./: .gitignore  .gitmodules  LICENSE-THIRD-PARTY.md  README  README.md
src/AMR_corebot/navigation_bringup/: CMakeLists.txt  package.xml
src/AMR_corebot/navigation_bringup/config/: amcl.yaml  mapper_params.yaml  navigation.yaml
src/AMR_corebot/navigation_bringup/launch/: SLAM.launch.py  amcl.launch.py  navigation_bringup.launch.py
src/AMR_corebot/navigation_bringup/maps/: map.pgm  map.yaml
src/AMR_corebot/navigation_bringup/src/: cmd_vel_bridge.cpp
src/corebot_base/corebot_bringup/: CMakeLists.txt  package.xml
src/corebot_base/corebot_bringup/config/: controllers.yaml
src/corebot_base/corebot_bringup/launch/: corebot_bringup.launch.py
src/corebot_base/corebot_bringup/src/: teleop_node.cpp
src/corebot_base/corebot_description/: CMakeLists.txt  package.xml
src/corebot_base/corebot_description/launch/: corebot_controllers.launch.py  display.launch.py  ign_mobile_robot.launch.py  sim_w_controller.launch.py
src/corebot_base/corebot_description/meshes/: backword_ultrasonic_link.STL  cam_link.STL  caster_wheel_link.STL  forword_ultrasonic_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
src/corebot_base/corebot_description/urdf/: CoreBot.urdf.xacro  mobile_robot.urdf.xacro  ros2_control.urdf.xacro
src/corebot_base/corebot_hardware/: CMakeLists.txt  corebot_base_hardware.xml  package.xml
src/corebot_base/corebot_hardware/include/corebot_hardware/: corebot_base_hardware.hpp  motor_encoder.hpp  wheel.hpp
src/corebot_base/corebot_hardware/src/: corebot_base_hardware.cpp  get_imu_covariance.cpp  imu_filter.cpp  motor_encoder.cpp  wheel.cpp
src/corebot_base/corebot_hardware/test/: test_plugin_loader.cpp
src/corebot_base/corebot_interfaces/: CMakeLists.txt  package.xml
src/corebot_base/corebot_interfaces/msg/: EncoderTicks.msg
src/corebot_base/corebot_interfaces/srv/: WifiManager.srv
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/config/: ekf_odom_imu.yaml
src/sensor_fusion/launch/: odom_imu_ekf.launch.py
