<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corebot_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahmedtheaziz73@gmail.com">ahmed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>corebot_interfaces</build_depend>
  <exec_depend>corebot_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros2_control plugin="${prefix}/corebot_base_hardware.xml"/>
  </export>
</package>
